# mini-drop

./: .dockerignore  .env.example  .gitignore  DEMO.md  Makefile  README.md  dev.py  docker-compose.control.yml  docker-compose.local.yml  docker-compose.prebuilt-web.yml  docker-compose.worker.yml  docker-compose.yml  mini-drop-演示体系.md  pyproject.toml
agent/mini_drop_agent/: artifact_upload.py  config.py  connection.py  logging_utils.py  main.py  metrics.py
analyzer/: config.example.toml
analyzer/mini_drop_analyzer/: hotmethod_analyzer.py
analyzer/scripts/: README.md
demo/: cpu_hotspot.py  demo.sh  e2e_final.sh  e2e_fix_round.sh  test_runner.py  vm_deploy.sh  vm_test_targets.py
deploy/: DOCKER_NOTES.md  README.md  VM_TEST_REPORT.md  vm_report.sh  vm_test.sh
deploy/dockerfiles/: agent.Dockerfile  server.Dockerfile  web.Dockerfile  web.control.Dockerfile  web.prebuilt.Dockerfile
deploy/env/: control.env.example  worker.env.example
deploy/napcat/: README.md  setup.ps1  start.cmd
deploy/nginx/: control-tls.conf  default.conf
deploy/scripts/: configure_ai_provider.py  configure_control_ai.ps1  generate-dev-certs.sh  install-worker.sh  server-entrypoint.sh
deploy/systemd/: mini-drop-agent.service
docs/: ai_architecture_review.md  design_doc_final.md  rca_eval_report.md  three-node-vm-deployment.md  vm_cluster_test_report.md
proto/: README.md  common.proto  compile.sh  control.proto  healthcheck.proto  hotmethod.proto  init.proto
server/app/: _env.py  ai_provider.py  ai_validation.py  analyzer_runner.py  cli.py  common_utils.py  database.py  event_bus.py  grpc_auth.py  grpc_server.py  logging_utils.py  main.py  (+7 more)
tests/: test_agent_artifact_upload.py  test_agent_config.py  test_agent_connection.py  test_agent_metrics.py  test_ai_provider.py  test_ai_validation.py  test_analyzer.py  test_analyzer_runner.py  test_cli.py  test_configure_ai_provider.py  test_continuous_collector.py  test_database.py  test_diagnosis_orchestrator.py  test_e2e.py  test_ebpf_collector.py  test_event_bus.py  test_grpc_services.py  test_java_async_collector.py  test_logging_utils.py  test_memory_collector.py  test_nlp.py  test_perf_collector.py  test_pprof_collector.py  test_pyspy_collector.py  test_qqbot_provider.py  test_rca.py  test_rca_enhanced.py  test_server_api.py  test_server_logging.py  test_sql_repository.py  test_state_machine.py  test_storage.py  test_sys_metrics_collector.py
web/: index.html  package-lock.json  package.json  vite.config.js
(+76 files in other folders)
