[project]
name = "micro-drop"
version = "0.1.0"
description = "Mini-Drop: a lightweight Linux performance profiling platform"
requires-python = ">=3.9"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "grpcio>=1.48",
    "grpcio-tools>=1.48",
    "protobuf>=3.20",
    "psycopg[binary]>=3.1",
    "minio>=7.0",
    "py-spy>=0.3",
    "requests",
    "sqlalchemy>=2.0",
    "pytest",
    "httpx",
]

[project.optional-dependencies]
dev = [
    "pytest-cov",
    "loguru",
]

[project.scripts]
micro-drop = "server.app.cli:main"

[tool.setuptools.packages.find]
include = ["server*", "agent*", "analyzer*"]
exclude = ["web*", "demo*", "deploy*", "docs*", "tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
