[project]
name = "micro-drop"
version = "0.1.0"
description = "Mini-Drop: a lightweight Linux performance profiling platform"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.100",
    "uvicorn>=0.23",
    "pydantic>=2.0",
    "grpcio>=1.80,<1.81",
    "protobuf>=6.33.5,<7",
    "psycopg[binary]>=3.1",
    "minio>=7.0",
    "py-spy>=0.3",
    "requests>=2.28",
    "sqlalchemy>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "grpcio-tools>=1.80,<1.81",
    "loguru>=0.7",
]
chatops = [
    "websockets>=10.0",
]

[project.scripts]
micro-drop = "server.app.cli:main"

[tool.setuptools.packages.find]
include = ["server*", "agent*", "analyzer*"]
exclude = ["web*", "demo*", "deploy*", "docs*", "tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
